# serial-transfer-server

./: .gitignore  CMakeLists.txt  README.en.md  README.md  SerialHandlerImplWithBoost.cpp  SerialHandlerImplWithBoost.h  TransferServer.cpp  TransferServer.h  WebSockServerImplWithBeast.cpp  WebSockServerImplWithBeast.h  factory.cpp  factory.h  hex.cpp  hex.h  main.cpp  web_sock.cpp  web_sock.h
boost_wrapper/: CMakeLists.txt  SerialHandlerImpl.cpp  SerialHandlerImpl.h  SerialHandlerImplWithBoost.cpp  SerialHandlerImplWithBoost.h  WebSockServerImplWithBeast.cpp  WebSockServerImplWithBeast.h  factory.cpp  factory.h  web_sock.cpp  web_sock.h
web/: index.html
web/js/: app.js  serial.js
